--- a/lab2/journal_ex1.css
+++ b/lab2/journal_ex1.css
@@ -29,6 +29,7 @@ body {
 #header {
     background-color: #A8F0F0;
     border: none;
+    float: right;
 }
 
 #header h2 {
@@ -51,3 +52,4 @@ body {
 .entry {
     overflow: hidden;
 }
+
