--- a/lab2/journal_ex1.css
+++ b/lab2/journal_ex1.css
@@ -29,13 +29,16 @@ body {
 #header {
     background-color: #A8F0F0;
     border: none;
-    float: right;
+    text-align: right;
+    overflow: hidden;
 }
 
 #header h2 {
     font-size: 14pt;
     border: none;
-    float: right;
+    display: inline-block;
+    margin: 0;
+    vertical-align: middle;
 }
 
 #header {
@@ -56,4 +59,5 @@ body {
     margin: 0 10%;
     padding: 10px 0;
 }
+
 
